--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "tencentcloud/tencentcloud-sdk-php": "3.0.94"
+        "tencentcloud/tencentcloud-sdk-php": "^3.0.94"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
